# fastapi-robot-helper

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 801b6f7ce65f_create_script_model.py  9271c05b38ae_upadate_add_email_users_table.py  ade1c50ca653_create_users_table.py  bc893dcaf0b6_create_scripts_table_with_uuid_fk.py  d3d50306a5d1_update_user.py
src/app/: database.py  main.py  models.py  schemas.py  service.py
src/app/api/: integration.py  regexp.py  script.py  user.py
src/app/core/: config.py  database.py  jwt.py
src/app/depends/: auth.py
src/app/models/: script.py  user.py
src/app/schemas/: integration.py  regexp.py  script.py  user.py
src/app/service/: integration.py  regexp.py  script.py  user.py
src/app/utils/: utils.py
tests/: test_integration.py  test_regexp.py  test_scripts.py  test_user.py
