[project]
name = "fastapi-robot-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Proskurin",email = "Mx.prskn@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flake8-black (>=0.3.6,<0.4.0)",
]

[tool.poetry]
name = "fastapi-robot-helper"
version = "0.1.0"
description = ""
authors = ["Maxim Proskurin <Mx.prskn@yandex.ru>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
aiosqlite = "^0.21.0"
isort = "^6.0.1"
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
mypy = ">=1.17.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
src_paths = ["src/app", "tests"]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-select = ["B"]
extend-ignore = [
    "E203",  # whitespace before ':', conflicts with black
    "W503",  # line break before binary operator, conflicts with black
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv/",
    "venv"
]